# CMakeLists.txx
cmake_minimum_required(VERSION 3.12)
project(Japtang VERSION 0.1)
cmake_policy(SET CMP0079 NEW)

message(Boost 1.17.0 setup)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
find_package(Boost 1.75.0)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    link_libraries(${Boost_LIBRARIES})
endif()

message(ODBC 2.3.9 setup)
set(ODBC_USE_STATIC_LIBS OFF)
find_package(ODBC 2.3.9)
message(ODBC_FOUND)
if(ODBC_FOUND)
    include_directories(${ODBC_INCLUDE_DIRS})
    link_directories(${ODBC_LIBRARY})
endif()

message(GTEST setup)
message(GTEST_FOUND)
find_package(GTest REQUIRED)
find_package(Threads REQUIRED)
if(GTest_FOUND)
    include_directories(${GTEST_INCLUDE_DIRS})
    link_directories(${GTEST_BOTH_LIBRARIES})
endif()

set ( CMAKE_CXX_FLAGS "-O1 -Wall" ) 
set ( CMAKE_CXX_FLAGS_DEBUG "-O0 -g" ) 

include_directories(${CMAKE_SOURCE_DIR}/include)
add_subdirectory(src)
#add_subdirectory(test)
message(${GTEST_BOTH_LIBRARIES})
# target_link_libraries(${PROJECT_NAME} GTest)